# promise-tracker

./: .gitignore  .justfile  AGENTS.md  Cargo.toml  README.md  dagger.json  package-lock.json  package.json
.dagger/: .gitignore  go.mod  main.go
.devcontainer/: Dockerfile  devcontainer.json
__mocks__/: styleMock.js
api/: build.rs
api/src/: static_files.rs  storage.rs
cli/: Cargo.toml
cli/src/: agents.rs  behaviors.rs  check_unsatisfied.rs  main.rs  schema.rs  validate.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs
frontend/src/components/: contract_browser.rs  contract_card.rs  contract_carder.rs  contract_edit_modal.rs  contract_grapher.rs  mod.rs  promise_network_graph.rs  simulation_controls.rs
frontend/src/js/: force_graph.js  mermaid.js
frontend/src/utils/: validation.rs
frontend/style/: main.css
promise_tracker/: .justfile  Cargo.toml
promise_tracker/api/: Cargo.toml
promise_tracker/api/src/: main.rs  server.rs  static_files.rs  storage.rs  validation.rs
promise_tracker/cli/src/: check_unsatisfied.rs  lib.rs  main.rs  schema.rs  simulate.rs  validate.rs  who_provides.rs
promise_tracker/frontend/: index.html
promise_tracker/frontend/src/: lib.rs  models.rs
promise_tracker/frontend/src/components/: contract_browser.rs  contract_card.rs  contract_carder.rs  contract_edit_modal.rs  contract_graph.rs  contract_grapher.rs  contract_text.rs  mod.rs
promise_tracker/frontend/src/utils/: diff.rs  mod.rs  validation.rs
promise_tracker/schema/: Cargo.toml
promise_tracker/schema/src/: main.rs
promise_tracker/src/: lib.rs  resolve.rs
promise_tracker/src/components/: agent.rs  behavior.rs  item.rs  mod.rs  superagent.rs
promise_tracker/wpt/: Cargo.toml
promise_tracker/wpt/src/: lib.rs
scripts/: baseline.js  satisfy.js  workflow.js
src/: App.js  App.test.js  diagram.rs  lib.rs  network_diagram.rs
src/components/: ContractBrowser.js  ContractCard.css  ContractCard.js  ContractCarder.js  ContractEditModal.js  ContractGraph.js  ContractGrapher.js  ContractInput.js  ContractText.css  ContractText.js  Mermaid.js  PromiseNetworkGraph.css  PromiseNetworkGraph.js
src/libs/promise-tracker/: contract.js  contract.test.js  diagram.js  diagram.test.js  network-diagram.js  promise-tracker.js  promise-tracker.test.js  resolution.js  resolution.test.js  workstream.js  workstream.test.js
src/utils/: contractDiff.js  filenameValidation.js
wpt/: Cargo.toml
wpt/src/: lib.rs
