[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
promise_tracker = { path = "../" }
schemars = "0.8.12"
serde = "1.0.188"
serde_json = "1.0.104"
serde_yaml = "0.9.25"

