[package]
name = "promise_tracker_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_drag_reorder = "0.1"
leptos_meta = "0.7"
oco_ref = "0.2"
promise_tracker = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.6"
similar = "2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Event",
    "InputEvent",
    "MouseEvent",
    "DragEvent",
    "DataTransfer",
    "console",
] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
