[package]
name = "promise_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
schemars = "0.8.12"
serde = { version = "1.0.174", features = ["std", "derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"

[workspace]
members = [
  "cli",
  "schema",
  "wpt",
]
