[package]
name = "wpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
promise_tracker = { path = "../" }
schemars = "0.8.13"
serde = "1.0.188"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.107"
serde_yaml = "0.9.27"
wasm-bindgen = { version = "0.2.87", features = ["serde", "serde-serialize", "serde_json"] }
