[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
promise_tracker = { path = "../" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
rust-embed = { version = "8.5", features = ["axum", "mime-guess", "include-exclude"] }
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["blocking"] }

