[package]
name = "wpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
promise_tracker = { path = "../" }
schemars = "0.8.13"
serde = "1.0.188"
serde_json = "1.0.107"
wasm-bindgen = { version = "0.2.87", features = ["serde", "serde-serialize", "serde_json"] }
